[project]
name = "eficas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "control-arena",
    "fuzzycontrol",
]

[tool.uv.sources]
fuzzycontrol = { path = "fuzzycontrol", editable = true }
control-arena = { path = "control-arena", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
